[build-system]
requires = ['build', 'setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'rpkilog'
version = '0.26011103'
authors = [{ name = 'Jeff Wheeler', email = 'jeffsw6@gmail.com' }]
dependencies = [
    'boto3',
    'netaddr',
    'opensearch-py',
    'psutil',
    'python-dateutil',
    'pyyaml',
    'requests',
    'requests_aws4auth',
    'tqdm',
]
description = 'A web tool for searching RPKI history'
keywords = [
    'BGP',
    'RPKI',
]
# setuptools doesn't implement PEP 639 (yet).  This causes `python -m build` to fail when both `project.license`
# is set AND the `LICENSE` **file** exists.  I'll comment out project.license for now.
#license = 'MIT'
readme = 'README.md'
requires-python = '>=3.10'
urls.homepage = 'https://rpkilog.com'
urls.source = 'https://github.com/jeffsw/rpkilog/python/rpkilog/'
[project.optional-dependencies]
dev = [
    'boto3-stubs',
    'build',
    'flake8',
    'pytest',
]
tests = [
    'flake8',
    'pytest'
]

[dependency-groups]
dev = [
    'boto3-stubs',
    'build',
    'flake8',
    'pytest',
]

[project.scripts]
rpkilog-archive-site-crawler = 'rpkilog.archive_site_crawler:ArchiveSiteCrawler.cli_entry_point'
rpkilog-diff-import = 'rpkilog:VrpDiff.cli_entry_point_import'
rpkilog-hapi = 'rpkilog.hapi:cli_entry_point'
rpkilog-ingest-tar = 'rpkilog:IngestTar.cli_entry_point'
rpkilog-routinator-vrp-fetcher = 'rpkilog.routinator_vrp_fetcher:cli_entry_point'
rpkilog-vrp-cache-differ = 'rpkilog:VrpDiff.cli_entry_point'

[tool.black]
line-length = 120

[tool.lambda_zip]
upload_s3_url = 's3://rpkilog-artifact/lambda_rpkilog.zip'

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
